--- a/public/index.html
+++ b/public/index.html
@@ -374,6 +374,7 @@ Passionate about enhancing your natural beauty, I specialize in creating stunnin
 <div class="max-w-4xl mx-auto">
 <div class="text-center mb-16">
 <h2 class="font-display text-3xl sm:text-4xl md:text-5xl mb-4 lipstick-red">Book Your Appointment</h2>
+<img src="https://i.ibb.co/rRYmPZxQ/image.jpg" alt="Client Glam Look" style="max-width: 100%; height: auto; margin-top: 30px;">
 <p class="charcoal">Let's create your perfect look together</p>
 </div>
 <div class="card-glass p-8 md:p-12">
