--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,6 @@ html {
 img {
   image-rendering: -webkit-optimize-contrast;
   image-rendering: crisp-edges;
-  image-rendering: pixelated;
 }
 </style>
 </head>
@@ -249,7 +248,6 @@ Passionate about enhancing your natural beauty, I specialize in creating stunnin
 </div>
 <h3 class="font-display text-2xl mb-3 charcoal">Bridal Makeup</h3>
 <p class="charcoal mb-4">Complete bridal look including trial session, day-of makeup, and touch-up kit</p>
-<div class="text-lipstick-red font-semibold">From $250</div>
 </div>
 <div class="service-card card-glass p-8">
 <div class="w-14 h-14 rounded-full bg-lipstick-red/20 flex items-center justify-center mb-6">
@@ -259,7 +257,6 @@ Passionate about enhancing your natural beauty, I specialize in creating stunnin
 </div>
 <h3 class="font-display text-2xl mb-3 charcoal">Event Makeup</h3>
 <p class="charcoal mb-4">Glamorous looks for parties, proms, photoshoots, and special occasions</p>
-<div class="text-lipstick-red font-semibold">From $120</div>
 </div>
 <div class="service-card card-glass p-8">
 <div class="w-14 h-14 rounded-full bg-lipstick-red/20 flex items-center justify-center mb-6">
@@ -269,7 +266,6 @@ Passionate about enhancing your natural beauty, I specialize in creating stunnin
 </div>
 <h3 class="font-display text-2xl mb-3 charcoal">Natural Glam</h3>
 <p class="charcoal mb-4">Subtle enhancement for everyday elegance and professional settings</p>
-<div class="text-lipstick-red font-semibold">From $80</div>
 </div>
 <div class="service-card card-glass p-8">
 <div class="w-14 h-14 rounded-full bg-lipstick-red/20 flex items-center justify-center mb-6">
@@ -279,7 +275,6 @@ Passionate about enhancing your natural beauty, I specialize in creating stunnin
 </div>
 <h3 class="font-display text-2xl mb-3 charcoal">Bridal Hair</h3>
 <p class="charcoal mb-4">Elegant updos, romantic curls, and custom bridal hairstyles</p>
-<div class="text-lipstick-red font-semibold">From $200</div>
 </div>
 <div class="service-card card-glass p-8">
 <div class="w-14 h-14 rounded-full bg-lipstick-red/20 flex items-center justify-center mb-6">
@@ -289,7 +284,6 @@ Passionate about enhancing your natural beauty, I specialize in creating stunnin
 </div>
 <h3 class="font-display text-2xl mb-3 charcoal">Event Styling</h3>
 <p class="charcoal mb-4">Professional styling for any special occasion or photoshoot</p>
-<div class="text-lipstick-red font-semibold">From $100</div>
 </div>
 <div class="service-card card-glass p-8">
 <div class="w-14 h-14 rounded-full bg-lipstick-red/20 flex items-center justify-center mb-6">
@@ -299,7 +293,6 @@ Passionate about enhancing your natural beauty, I specialize in creating stunnin
 </div>
 <h3 class="font-display text-2xl mb-3 charcoal">Full Glam Package</h3>
 <p class="charcoal mb-4">Complete makeup & hair transformation for the ultimate experience</p>
-<div class="text-lipstick-red font-semibold">From $350</div>
 </div>
 </div>
 </div>
@@ -313,13 +306,12 @@ Passionate about enhancing your natural beauty, I specialize in creating stunnin
 <p class="charcoal">Real transformations, real confidence</p>
 </div>
 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-<img src="https://i.ibb.co/rRYmPZxQ/image.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
-<img src="https://i.ibb.co/Fk1Wqjvs/image.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
-<img src="https://i.ibb.co/8wCtxnB/image.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
-<img src="https://i.ibb.co/QjFQv16N/image.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
-<img src="https://i.ibb.co/GfSb4hwz/image.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
-<img src="https://i.ibb.co/Fb38ysdz/image.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
-<img src="https://i.ibb.co/mrrFx6Rm/image.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
+<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/IMG_0702.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
+<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/IMG_0703.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
+<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/IMG_0704.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
+<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/IMG_0705.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
+<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/PHOTO-2026-01-21-16-39-25%202.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
+<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/PHOTO-2026-01-21-16-39-25.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
 </div>
 </div>
 </section>
@@ -351,12 +343,7 @@ Passionate about enhancing your natural beauty, I specialize in creating stunnin
 <div class="max-w-6xl mx-auto">
 <div class="text-center mb-16">
 <h2 class="font-display text-3xl sm:text-4xl md:text-5xl mb-4 lipstick-red">Client Reviews</h2>
-<p class="charcoal">See what our clients have to say</p>
-</div>
-<div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6 mb-12">
-<div class="card-glass p-6 text-center charcoal">
-<p>No reviews yet. Be the first to share your experience!</p>
-</div>
+<p class="charcoal">Share your experience</p>
 </div>
 <div class="max-w-xl mx-auto">
 <div class="card-glass p-8">
@@ -383,7 +370,6 @@ Passionate about enhancing your natural beauty, I specialize in creating stunnin
 </div>
 <button type="submit" id="submit-review-btn" class="btn-lipstick w-full py-4 text-white font-semibold uppercase tracking-wider">Submit Review</button>
 </form>
-</div>
 </div>
 </div>
 </section>
@@ -416,12 +402,12 @@ Passionate about enhancing your natural beauty, I specialize in creating stunnin
 <label for="service-select" class="block text-sm charcoal mb-2">Service *</label>
 <select id="service-select" required class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal focus:border-lipstick-red focus:outline-none appearance-none bg-gradient-to-r from-transparent to-transparent">
 <option value="" class="bg-gray-900">Select a service</option>
-<option value="bridal-makeup" class="bg-gray-900">Bridal Makeup - From $250</option>
-<option value="event-makeup" class="bg-gray-900">Event Makeup - From $120</option>
-<option value="natural-glam" class="bg-gray-900">Natural Glam - From $80</option>
-<option value="bridal-hair" class="bg-gray-900">Bridal Hair - From $200</option>
-<option value="event-styling" class="bg-gray-900">Event Styling - From $100</option>
-<option value="full-package" class="bg-gray-900">Full Glam Package - From $350</option>
+<option value="bridal-makeup" class="bg-gray-900">Bridal Makeup</option>
+<option value="event-makeup" class="bg-gray-900">Event Makeup</option>
+<option value="natural-glam" class="bg-gray-900">Natural Glam</option>
+<option value="bridal-hair" class="bg-gray-900">Bridal Hair</option>
+<option value="event-styling" class="bg-gray-900">Event Styling</option>
+<option value="full-package" class="bg-gray-900">Full Glam Package</option>
 </select>
 </div>
 </div>
@@ -451,7 +437,7 @@ Passionate about enhancing your natural beauty, I specialize in creating stunnin
 <textarea id="booking-message" rows="4" class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal placeholder-charcoal resize-none focus:border-lipstick-red focus:outline-none" placeholder="Tell us about your event, any specific looks you'd like, or any questions..."></textarea>
 </div>
 <button type="submit" id="submit-booking-btn" class="btn-lipstick w-full py-4 text-white font-semibold uppercase tracking-wider text-lg">Request Booking</button>
-<p class="text-center charcoal text-sm">We'll confirm your appointment within 24 hours via email or phone</p>
+<p class="text-center charcoal text-sm">We'll contact you within 24 hours via email or phone</p>
 </form>
 </div>
 </div>
