--- a/public/index.html
+++ b/public/index.html
@@ -146,10 +146,11 @@ img {
 </a>
 <div class="hidden md:flex items-center space-x-8">
 <a href="#home" class="nav-link text-sm uppercase tracking-wider charcoal hover:text-lipstick-red">Home</a>
-<a href="#services" class="nav-link text-sm uppercase tracking-wider charcoal hover:text-lipstick-red">Services</a>
 <a href="#gallery" class="nav-link text-sm uppercase tracking-wider charcoal hover:text-lipstick-red">Gallery</a>
-<a href="#reviews" class="nav-link text-sm uppercase tracking-wider charcoal hover:text-lipstick-red">Reviews</a>
-<a href="#book" class="btn-lipstick px-6 py-2 text-white font-semibold text-sm uppercase tracking-wider">Book Now</a>
+<a href="#services" class="nav-link text-sm uppercase tracking-wider charcoal hover:text-lipstick-red">Services</a>
+<a href="#about" class="nav-link text-sm uppercase tracking-wider charcoal hover:text-lipstick-red">About Mel</a>
+<a href="#book" class="nav-link text-sm uppercase tracking-wider charcoal hover:text-lipstick-red">Book Now</a>
+<a href="#contact" class="nav-link text-sm uppercase tracking-wider charcoal hover:text-lipstick-red">Contact</a>
 </div>
 <button id="mobile-menu-btn" class="md:hidden charcoal p-2">
 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -161,9 +162,11 @@ img {
 <div id="mobile-menu" class="mobile-menu md:hidden">
 <div class="flex flex-col p-6 space-y-6">
 <a href="#home" class="charcoal hover:text-lipstick-red uppercase tracking-wider" onclick="closeMobileMenu()">Home</a>
-<a href="#services" class="charcoal hover:text-lipstick-red uppercase tracking-wider" onclick="closeMobileMenu()">Services</a>
 <a href="#gallery" class="charcoal hover:text-lipstick-red uppercase tracking-wider" onclick="closeMobileMenu()">Gallery</a>
-<a href="#reviews" class="charcoal hover:text-lipstick-red uppercase tracking-wider" onclick="closeMobileMenu()">Reviews</a>
+<a href="#services" class="charcoal hover:text-lipstick-red uppercase tracking-wider" onclick="closeMobileMenu()">Services</a>
+<a href="#about" class="charcoal hover:text-lipstick-red uppercase tracking-wider" onclick="closeMobileMenu()">About Mel</a>
+<a href="#book" class="charcoal hover:text-lipstick-red uppercase tracking-wider" onclick="closeMobileMenu()">Book Now</a>
+<a href="#contact" class="charcoal hover:text-lipstick-red uppercase tracking-wider" onclick="closeMobileMenu()">Contact</a>
 <a href="#book" class="btn-lipstick px-6 py-3 text-white font-semibold text-center uppercase tracking-wider" onclick="closeMobileMenu()">Book Now</a>
 </div>
 </div>
@@ -196,7 +199,7 @@ Book Appointment
 </div>
 <div class="flex justify-center gap-8 text-center">
 <div>
-<div class="text-3xl sm:text-4xl font-display lipstick-red">5+</div>
+<div class="text-3xl sm:text-4xl font-display lipstick-red">10+</div>
 <div class="text-xs sm:text-sm charcoal uppercase tracking-wider">Years Experience</div>
 </div>
 <div class="w-px bg-lipstick-red/30"></div>
@@ -211,24 +214,28 @@ Book Appointment
 </div>
 </div>
 </div>
-<a href="#services" class="absolute bottom-8 left-1/2 transform -translate-x-1/2 animate-bounce">
+<a href="#gallery" class="absolute bottom-8 left-1/2 transform -translate-x-1/2 animate-bounce">
 <svg class="w-6 h-6 text-lipstick-red" fill="none" stroke="currentColor" viewBox="0 0 24 24">
 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
 </svg>
 </a>
 </section>
 
-<!-- About Section -->
-<section class="py-20 px-4">
-<div class="max-w-4xl mx-auto">
-<div class="section-divider"></div>
-<div class="text-center">
-<h2 class="font-display text-3xl sm:text-4xl md:text-5xl mb-6 lipstick-red">About Me</h2>
-<p class="charcoal text-lg leading-relaxed max-w-2xl mx-auto">
-Passionate about enhancing your natural beauty, I specialize in creating stunning makeup looks and beautiful hairstyles for any occasion. Whether it's your wedding day, a special event, or a glamorous photoshoot, I'm here to make you feel confident and radiant.
-</p>
+<!-- Client Gallery Section -->
+<section id="gallery" class="py-20 px-4 bg-white">
+<div class="max-w-6xl mx-auto">
+<div class="text-center mb-12">
+<h2 class="font-display text-3xl sm:text-4xl md:text-5xl mb-4 lipstick-red">Client Gallery</h2>
+<p class="charcoal">Real transformations, real confidence</p>
 </div>
-<div class="section-divider"></div>
+<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/IMG_0702.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
+<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/IMG_0703.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
+<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/IMG_0704.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
+<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/IMG_0705.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
+<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/PHOTO-2026-01-21-16-39-25%202.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
+<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/PHOTO-2026-01-21-16-39-25.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
+</div>
 </div>
 </section>
 
@@ -298,83 +305,22 @@ Passionate about enhancing your natural beauty, I specialize in creating stunnin
 </div>
 </section>
 
-<!-- Client Gallery Section -->
-<section id="gallery" class="py-20 px-4 bg-white">
-<div class="max-w-6xl mx-auto">
-<div class="text-center mb-12">
-<h2 class="font-display text-3xl sm:text-4xl md:text-5xl mb-4 lipstick-red">Client Gallery</h2>
-<p class="charcoal">Real transformations, real confidence</p>
-</div>
-<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/IMG_0702.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
-<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/IMG_0703.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
-<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/IMG_0704.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
-<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/IMG_0705.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
-<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/PHOTO-2026-01-21-16-39-25%202.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
-<img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/PHOTO-2026-01-21-16-39-25.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
-</div>
-</div>
-</section>
-
-<!-- Instagram Section -->
-<section class="py-20 px-4 bg-lipstick-red/10">
+<!-- About Mel Section -->
+<section id="about" class="py-20 px-4 bg-white">
 <div class="max-w-4xl mx-auto text-center">
-<h2 class="font-display text-3xl sm:text-4xl md:text-5xl mb-4 lipstick-red">Follow My Work</h2>
-<p class="charcoal mb-8">Check out my latest looks and transformations on Instagram</p>
-<a href="https://www.instagram.com/glamby_mel_" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-4 card-glass p-8 hover:border-lipstick-red transition-all group">
-<div class="w-20 h-20 rounded-full bg-lipstick-red flex items-center justify-center">
-<svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
-<path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073z" />
-</svg>
-</div>
-<div class="text-left">
-<div class="font-display text-2xl charcoal group-hover:text-lipstick-red transition-colors">@glamby_mel_</div>
-<div class="charcoal">View Portfolio & Book via DM</div>
-</div>
-<svg class="w-6 h-6 text-lipstick-red group-hover:translate-x-2 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
-</svg>
-</a>
+  <img src="https://raw.githubusercontent.com/madebymallii/glambymel/main/PHOTO-2026-01-21-16-39-24%202.jpg" alt="Mel - Professional Makeup Artist" class="w-32 h-32 sm:w-40 sm:h-40 rounded-full object-cover mx-auto mb-8 border-2 border-lipstick-red/20 shadow-md">
+  <h2 class="font-display text-3xl sm:text-4xl md:text-5xl mb-6 lipstick-red">About Mel</h2>
+  <div class="charcoal text-lg leading-relaxed max-w-2xl mx-auto">
+    <p class="mb-4">With almost a decade worth of experience in the beauty industry, I am UK-based professional makeup artist known for her flawless artistry, refined technique, and ability to bring a touch of luxury to every look.</p>
+    <p class="mb-4">Trained at the prestigious London Academy Freelance Makeup, I specialised in airbrush makeup, editorial beauty, film and television, and bespoke bridal artistry.</p>
+    <p class="mb-4">My work blends the precision of high-fashion makeup with the warmth and authenticity that make every client feel confident, radiant, and camera-ready.</p>
+    <p class="mb-4">Whether she's creating timeless elegance for a bride, sculpturing an essential look for a photoshoot or preparing talent for the screen, my signature approach combines technical mastery with an intuitive understanding of individual beauty.</p>
+    <p>Available for projects across the UK and internationally.</p>
+  </div>
 </div>
 </section>
 
-<!-- Reviews Section -->
-<section id="reviews" class="py-20 px-4">
-<div class="max-w-6xl mx-auto">
-<div class="text-center mb-16">
-<h2 class="font-display text-3xl sm:text-4xl md:text-5xl mb-4 lipstick-red">Client Reviews</h2>
-<p class="charcoal">Share your experience</p>
-</div>
-<div class="max-w-xl mx-auto">
-<div class="card-glass p-8">
-<h3 class="font-display text-2xl mb-6 text-center charcoal">Leave a Review</h3>
-<form id="review-form" class="space-y-6">
-<div>
-<label for="reviewer-name" class="block text-sm charcoal mb-2">Your Name</label>
-<input type="text" id="reviewer-name" required class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal placeholder-charcoal focus:border-lipstick-red focus:outline-none" placeholder="Enter your name">
-</div>
-<div>
-<label class="block text-sm charcoal mb-2">Your Rating</label>
-<div id="star-rating" class="flex gap-2 justify-center">
-<button type="button" class="star-btn text-4xl text-gray-600 hover:text-lipstick-red" data-rating="1">★</button>
-<button type="button" class="star-btn text-4xl text-gray-600 hover:text-lipstick-red" data-rating="2">★</button>
-<button type="button" class="star-btn text-4xl text-gray-600 hover:text-lipstick-red" data-rating="3">★</button>
-<button type="button" class="star-btn text-4xl text-gray-600 hover:text-lipstick-red" data-rating="4">★</button>
-<button type="button" class="star-btn text-4xl text-gray-600 hover:text-lipstick-red" data-rating="5">★</button>
-</div>
-<input type="hidden" id="selected-rating" value="0">
-</div>
-<div>
-<label for="review-text" class="block text-sm charcoal mb-2">Your Experience</label>
-<textarea id="review-text" required rows="4" class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal placeholder-charcoal resize-none focus:border-lipstick-red focus:outline-none" placeholder="Tell us about your experience..."></textarea>
-</div>
-<button type="submit" id="submit-review-btn" class="btn-lipstick w-full py-4 text-white font-semibold uppercase tracking-wider">Submit Review</button>
-</form>
-</div>
-</div>
-</section>
-
-<!-- Booking Section -->
+<!-- Book Now Section -->
 <section id="book" class="py-20 px-4 bg-lipstick-red/10">
 <div class="max-w-4xl mx-auto">
 <div class="text-center mb-16">
@@ -439,6 +385,43 @@ Passionate about enhancing your natural beauty, I specialize in creating stunnin
 <button type="submit" id="submit-booking-btn" class="btn-lipstick w-full py-4 text-white font-semibold uppercase tracking-wider text-lg">Request Booking</button>
 <p class="text-center charcoal text-sm">We'll contact you within 24 hours via email or phone</p>
 </form>
+</div>
+</div>
+</section>
+
+<!-- Contact Section -->
+<section id="contact" class="py-20 px-4">
+<div class="max-w-6xl mx-auto">
+<div class="text-center mb-16">
+<h2 class="font-display text-3xl sm:text-4xl md:text-5xl mb-4 lipstick-red">Contact</h2>
+<p class="charcoal">Get in touch or leave a review</p>
+</div>
+<div class="max-w-xl mx-auto">
+<div class="card-glass p-8">
+<h3 class="font-display text-2xl mb-6 text-center charcoal">Leave a Review</h3>
+<form id="review-form" class="space-y-6">
+<div>
+<label for="reviewer-name" class="block text-sm charcoal mb-2">Your Name</label>
+<input type="text" id="reviewer-name" required class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal placeholder-charcoal focus:border-lipstick-red focus:outline-none" placeholder="Enter your name">
+</div>
+<div>
+<label class="block text-sm charcoal mb-2">Your Rating</label>
+<div id="star-rating" class="flex gap-2 justify-center">
+<button type="button" class="star-btn text-4xl text-gray-600 hover:text-lipstick-red" data-rating="1">★</button>
+<button type="button" class="star-btn text-4xl text-gray-600 hover:text-lipstick-red" data-rating="2">★</button>
+<button type="button" class="star-btn text-4xl text-gray-600 hover:text-lipstick-red" data-rating="3">★</button>
+<button type="button" class="star-btn text-4xl text-gray-600 hover:text-lipstick-red" data-rating="4">★</button>
+<button type="button" class="star-btn text-4xl text-gray-600 hover:text-lipstick-red" data-rating="5">★</button>
+</div>
+<input type="hidden" id="selected-rating" value="0">
+</div>
+<div>
+<label for="review-text" class="block text-sm charcoal mb-2">Your Experience</label>
+<textarea id="review-text" required rows="4" class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal placeholder-charcoal resize-none focus:border-lipstick-red focus:outline-none" placeholder="Tell us about your experience..."></textarea>
+</div>
+<button type="submit" id="submit-review-btn" class="btn-lipstick w-full py-4 text-white font-semibold uppercase tracking-wider">Submit Review</button>
+</form>
+</div>
 </div>
 </div>
 </section>
